--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,5 +14,5 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
     infoIcon="lucide:info"
   >
 
-  ></MainCard>
+  </MainCard>
 </BaseLayout>
