--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,16 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
     textOverlay="NASTER"
     infoIcon="lucide:info"
   >
+  <div class="space-y-8">
+        <!-- GitHub Stats -->
+      <section class="py-6">
+        <h2 class="text-2xl font-bold mb-6 flex items-center gap-2">
+          <Icon name="lucide:github" class="w-6 h-6 text-primary" />
+          <span>Latest Repos</span>
+        </h2>
 
+        <GitHubStats username="Naster17" repositoryName="esp-ninja" showLanguages={true} showContributors={true} />
+      </section>
+  </div>
   </MainCard>
 </BaseLayout>
