--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -38,17 +38,13 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
               <span>GitHub</span>
             </a>
             <a
-              href="https://twitter.com/EveSunMaple"
+              href="https://t.me/naster17dev"
               target="_blank"
               rel="noopener noreferrer"
               class="btn btn-sm btn-outline gap-2"
             >
-              <Icon name="lucide:twitter" class="w-4 h-4" />
-              <span>Twitter</span>
-            </a>
-            <a href="mailto:evesunmaple@outlook.com" class="btn btn-sm btn-outline gap-2">
-              <Icon name="lucide:mail" class="w-4 h-4" />
-              <span>Email</span>
+              <Icon name="lucide:telegram" class="w-4 h-4" />
+              <span>Telegram</span>
             </a>
           </div>
 
