--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -50,7 +50,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
 
           <p class="text-base-content/80">
             Hi, I'm Nik. I'm interested in low-level development and really love hardware.
-            In the past, he was also engaged in cybersecurity and penetration testing. 
+            In the past, also engaged in cybersecurity and penetration testing. 
             I know a lot of interesting topics such as soldering, hacking, neural networks, and much more.
           </p>
         </div>
@@ -63,7 +63,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
           <span>GitHub Statistics</span>
         </h2>
 
-        <GitHubStats username="EveSunMaple" showLanguages={false} showCommitGraph={true} />
+        <GitHubStats username="Naster17" showLanguages={false} showCommitGraph={true} />
       </section>
 
       <!-- Tech Stack -->
