--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -72,14 +72,11 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
               { name: "Rust", icon: "simple-icons:rust", color: "oklch(0.62 0.15 56)" },
               { name: "Python", icon: "simple-icons:python", color: "oklch(0.6 0.2 250)" },
               { name: "Bash", icon: "simple-icons:gnubash", color: "oklch(0.83 0.035 183)" },
-              { name: "Linux", icon: "simple-icons:linux", color: "oklch(0.83 0.035 183)" },
-              { name: "Arduino", icon: "simple-icons:arduino", color: "oklch(0.80 0.1 173)" },
-              
-              { name: "Git", icon: "simple-icons:git", color: "oklch(0.7 0.2 30)" },
-
               { name: "HTB", icon: "simple-icons:hackthebox", color: "oklch(0.85 0.31 150)" },
-              { name: "Telegram", icon: "simple-icons:telegram", color: "oklch(0.6 0.2 240)" },
-
+              { name: "Hardware", icon: "simple-icons:opensourcehardware", color: "oklch(0.20 0 95)" },
+              { name: "Arduino", icon: "simple-icons:arduino", color: "oklch(0.80 0.1 173)" },
+              { name: "Git", icon: "simple-icons:git", color: "oklch(0.7 0.2 30)" },
+              { name: "Linux", icon: "simple-icons:linux", color: "oklch(0.83 0.035 183)" },
               { name: "Debian", icon: "simple-icons:debian", color: "oklch(0.48 0.18 0)" },
               { name: "Vim", icon: "simple-icons:vim", color: "oklch(0.62 0.12 145)" },
             ].map((tech) => (
