--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,31 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
         </h2>
         <GitHubStats username="Naster17" repositoryName="esp-ninja" showLanguages={true} showContributors={true} />
       </section>
-      
+      <!-- About -->
+    <section class="py-4">
+      <h2 class="text-2xl font-bold mb-6 flex items-center gap-2">
+        <Icon name="lucide:git-pull-request" class="w-6 h-6 text-primary" />
+        <span>About</span>
+      </h2>
+
+                <div class="flex-shrink-0 bg-base-300 p-2 rounded-full">
+                  <Icon name="lucide:git-commit" class="w-6 h-6 text-primary" />
+                </div>
+                <div>
+                  <h3 class="text-lg font-bold">
+                    <a
+                      href="/about"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      class="hover:text-primary transition-colors flex items-center gap-1"
+                    > About
+                      <Icon name="lucide:external-link" class="w-4 h-4" />
+                    </a>
+                  </h3>
+                  <p class="text-base-content/80">Check this out!</p>
+                </div>
+    </section>
+       
   </div>
   </MainCard>
 </BaseLayout>
