--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,6 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
     infoIcon="lucide:info"
   >
   <div class="space-y-8">
-      <!-- About -->
-
       <!-- GitHub Stats -->
       <section class="py-6">
         <h2 class="text-2xl font-bold mb-6 flex items-center gap-2">
@@ -24,7 +22,21 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
         </h2>
         <GitHubStats username="Naster17" repositoryName="esp-ninja" showLanguages={true} showContributors={true} />
       </section>
-       
+      <!-- About -->
+      <section class="py-6">
+        <h2 class="text-2xl font-bold mb-6 flex items-center gap-2">
+          <Icon name="material-symbols:info-outline-rounded" class="w-6 h-6 text-primary" />
+            <span><a
+                href="/about"
+                target="_self"
+                rel="noopener noreferrer"
+                class="hover:text-primary transition-colors flex items-center gap-1"
+            >Check this out!</a>
+            </span> 
+        </h2>
+          <Icon name="lucide:external-link" class="w-4 h-4" />
+      </section>
+
   </div>
   </MainCard>
 </BaseLayout>
