--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,8 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
         <GitHubStats username="Naster17" repositoryName="esp-ninja" showLanguages={true} showContributors={true} />
       </section>
       <!-- About -->
-      <section class="py-6">
-        <h2 class="text-2xl font-bold mb-6 flex items-center gap-2">
+      <section class="py-4">
+        <h2 class="text-2xl font-bold items-center gap-2">
           <Icon name="material-symbols:info-outline-rounded" class="w-6 h-6 text-primary" />
             <span><a
                 href="/about"
@@ -32,9 +32,9 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
                 rel="noopener noreferrer"
                 class="hover:text-primary transition-colors flex items-center gap-1"
             >Check this out!</a>
+            <Icon name="lucide:external-link" class="w-4 h-4" />
             </span> 
         </h2>
-          <Icon name="lucide:external-link" class="w-4 h-4" />
       </section>
 
   </div>
