--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
       </section>
       <!-- About -->
       <section class="py-4">
-        <h2 class="text-2xl font-bold items-center gap-2">
+        <h2 class="text-2xl font-bold items-center mb-4 flex gap-2">
           <Icon name="material-symbols:info-outline-rounded" class="w-6 h-6 text-primary" />
             <span><a
                 href="/about"
