--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -8,7 +8,7 @@ import RepositoryCard from "@/components/mdx/RepositoryCard.astro";
 
 <BaseLayout title="Projects">
   <MainCard
-    title="Projects"
+    title="Projects 🗂"
     description="A showcase of my open-source projects and contributions on GitHub."
     textOverlay="PROJECTS"
     infoIcon="lucide:code-2"
