--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
 
 <BaseLayout title="Home">
   <MainCard
-    title="Hi there! I'm Naster17 👋"
+    title="Welcome 🙌"
     description="My personal blog and portfolio website"
     textOverlay="NASTER"
     infoIcon="lucide:info"
