--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
   <MainCard
     title="Welcome 🙌"
     description="My personal blog and portfolio website"
-    textOverlay="NASTER"
+    textOverlay="HOME"
     infoIcon="lucide:info"
   >
   <div class="space-y-8">
