--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
       <section class="py-6">
         <h2 class="text-2xl font-bold mb-6 flex items-center gap-2">
           <Icon name="lucide:github" class="w-6 h-6 text-primary" />
-          <span>Latest Repos</span>
+          <span>Latest Repo</span>
         </h2>
         <GitHubStats username="Naster17" repositoryName="esp-ninja" showLanguages={true} showContributors={true} />
       </section>
