--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
 
 <BaseLayout title="About">
   <MainCard
-    title="Hi there! I'm Naster17 👋"
+    title="Hi there!👋"
     description="Low-level dev, Cybersec, Pentester, Embedded electronic lover!"
     textOverlay="ABOUT"
     infoIcon="lucide:user"
