--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
 
 <BaseLayout title="Home">
   <MainCard
-    title="Welcome 🙌"
+    title="Welcome to DevLog!"
     description="My personal blog and portfolio website"
     textOverlay="HOME"
     infoIcon="lucide:info"
