--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,9 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
       <section class="py-6">
       <span class="footer-title">Social</span>
       <div class="grid grid-flow-col gap-4">
-        <div class="tooltip" data-tip={icon.title}>
-            <a tabindex="0" href={icon.href} aria-label={icon.ariaLabel}>
-            <Icon name={icon.svg} class="text-2xl md:text-xl" />
+        <div class="tooltip">
+            <a tabindex="0" href="/about">
+            <Icon name="lucide:info" class="text-2xl md:text-xl" />
             </a>
         </div>
       </div>
