--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,14 +16,14 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
   <div class="space-y-8">
       <!-- Bar -->
       <section class="py-6">
-      <span class="footer-title">Social</span>
-      <div class="grid grid-flow-col gap-4">
-        <div class="tooltip">
-            <a tabindex="0" href="/about">
-            <Icon name="lucide:info" class="text-2xl md:text-xl" />
-            </a>
+        <div class="grid grid-flow-col gap-4">
+            <div class="tooltip">
+                <a tabindex="0" href="/about">
+                <Icon name="lucide:info" class="w-8 h-8 text-primary" />
+                About Me
+                </a>
+            </div>
         </div>
-      </div>
       </section>
       <!-- GitHub Stats -->
       <section class="py-6">
