--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
       <!-- Bar -->
       <section class="py-6">
         <div class="grid grid-flow-col gap-4">
-            <div class="tooltip">
+            <div>
                 <a tabindex="0" href="/about">
                 <Icon name="lucide:info" class="w-8 h-8 text-primary" />
                 About Me
