--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,12 +16,14 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
   <div class="space-y-8">
       <!-- Bar -->
       <section class="py-6">
-        <div class="grid grid-flow-col gap-4">
+        <div class="grid grid-flow-col gap-2">
             <div>
+                <h2>
                 <a tabindex="0" href="/about">
                 <Icon name="lucide:info" class="w-8 h-8 text-primary" />
-                About Me
+                <span>About Me</span>
                 </a>
+                </h2>
             </div>
         </div>
       </section>
