--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
     infoIcon="lucide:info"
   >
   <div class="space-y-8">
-      <!-- Bar -->
+      <!-- Bar 
       <section class="py-6">
         <div class="grid grid-flow-col gap-2">
             <div>
@@ -26,7 +26,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
                 </h2>
             </div>
         </div>
-      </section>
+      </section> -->
       <!-- GitHub Stats -->
       <section class="py-6">
         <h2 class="text-2xl font-bold mb-6 flex items-center gap-2">
