--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
             </a>
             <a href="/about" class="btn btn-outline gap-2">
               <Icon name="lucide:info" class="w-5 h-5" />
-              <span>Check About</span>
+              <span>Explore About</span>
             </a>
           </div>
         </div>
