--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
             Personal Blog | Portfolio | Curriculum
           </h1>
           <p class="text-xl text-base-content/80 max-w-3xl mb-8">
-            WebSite about my personal blog with author's topics, as well as my portfolio and resume.
+            WebSite about my personal blog with author's topics, and also my portfolio & curriculum.
           </p>
           <div class="flex flex-wrap gap-4 justify-center">
             <a href="/blog" class="btn btn-primary gap-2 btn-shine-effect">
